<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Macota.UpdateMascotaFragment" >

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName"
        tools:text="@string/msg_nombre" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_edad"
        android:inputType="number" />

    <EditText
        android:id="@+id/etRaza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/msg_raza"
        android:inputType="textPersonName"
        tools:text="@string/msg_raza" />

    <Button
        android:id="@+id/btActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bt_actualizar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btPlay"
            android:layout_width="306dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/msg_escucha_audio"
            android:src="@drawable/ic_play" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:contentDescription="@string/msg_imagen"
        android:scaleType="centerInside"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/backgrounds/scenic" />

</LinearLayout>