<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:orientation="vertical"
    tools:context=".ui.gallery.AddPaseoFragment">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/msg_nombre"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Hora Inicio"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHoraI"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/msg_hInicio"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text=":"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etMinI"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/msg_hFinal"
            android:inputType="number"
            android:maxLength="2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Hora Final"
        android:textSize="24sp" />

    <LinearLayout
        android:id="@+id/horarios"
        android:layout_width="match_parent"
        android:layout_height="163dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etHoraF"
            android:layout_width="77dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/msg_hInicio"
            android:inputType="number"
            android:maxLength="2" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingTop="20dp"
            android:text=":"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etMinF"
            android:layout_width="67dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/msg_hFinal"
            android:inputType="number"
            android:maxLength="2" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="Total"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/etTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:enabled="false"
        android:focusable="false"
        android:hint="@string/msg_total"
        android:inputType="number" />

    <Button
        android:id="@+id/btActualizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="AGREGAR PASEO" />

</LinearLayout>